<?xml version="1.0" encoding="utf-8"?>
<!-- 
 /*
 ** Enable Viacam for Android, a camera based mouse emulator
 **
 ** Copyright (C) 2015 Cesar Mauri Loba (CREA Software Systems)
 **
 ** This program is free software: you can redistribute it and/or modify
 ** it under the terms of the GNU General Public License as published by
 ** the Free Software Foundation, either version 3 of the License, or
 ** (at your option) any later version.
 **
 ** This program is distributed in the hope that it will be useful,
 ** but WITHOUT ANY WARRANTY; without even the implied warranty of
 ** MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 ** GNU General Public License for more details.
 **
 ** You should have received a copy of the GNU General Public License
 ** along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
-->
<resources>

    <!-- Do NOT translate -->
    <string name="app_name" translatable="false">EVA Facial Mouse</string>

    <!-- Description shown in the accessibility service screen -->
    <string name="eviacam_service_description">EVA is a mouse emulator that moves the pointer as you move your head. It tracks your face using the frontal camera of your device.</string>

    <!-- Label for the preferences screen -->
    <string name="eviacam_preferences_title">EVA settings</string>

    <!-- These are labels and summaries for settings -->
    <string name="motion_settings">Motion settings</string>
    <string name="x_axis_speed">X axis speed</string>
    <string name="x_axis_speed_summary">Sensitivity for the X axis</string>
    <string name="y_axis_speed">Y axis speed</string>
    <string name="y_axis_speed_summary">Sets response sensitivity for the Y axis</string>
    <string name="acceleration">Acceleration</string>
    <string name="acceleration_summary">Pointer acceleration. 0 disables</string>
    <string name="click_settings">Click settings</string>
    <string name="detection_settings">Detection settings</string>
    <string name="never">Never</string>
    <string name="after_five_seconds">after 5 seconds</string>
    <string name="after_ten_seconds">after 10 seconds</string>
    <string name="after_thirty_seconds">after 30 seconds</string>
    <string name="after_one_minute">after 1 minute</string>
    <string name="after_two_minutes">after 2 minutes</string>
    <string name="after_five_minutes">after 5 minutes</string>
    <string name="dwell_area">Dwell area</string>
    <string name="dwell_area_summary">Maximum allowed displacement before restarting the dwell time</string>
    <string name="dwell_time">Dwell time</string>
    <string name="dwell_time_summary">Time to wait (deciseconds) before making click</string>
    <string name="motion_smoothing">Motion smoothing</string>
    <string name="motion_smoothing_summary">Tremor reduction filter. 0 disables</string> 
    <string name="motion_threshold">Motion threshold</string>
    <string name="motion_threshold_summary">Minimum displacement (in pixels) to start moving pointer</string>
    <string name="sound_on_click">Play sound on click</string>
    <string name="consecutive_clicks">Consecutive clicks</string>
    <string name="time_without_detection">Stop pointer when face not detected</string>
    <string name="interface_settings">Interface settings</string>
    <string name="docking_panel_edge">Dock menu position</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="ui_elements_size">Interface elements size</string>
    <string name="xlarge">Extra large</string>
    <string name="large">Large</string>
    <string name="normal">Normal</string>
    <string name="small">Small</string>
    <string name="help">Help</string>
    <string name="configuration_wizard">Configuration wizard</string>
    <string name="version">Version</string>


    <!-- Actions available through the accessibility API -->
    <string name="click">Click</string>
    <string name="long_click">Long click</string>
    <string name="collapse">Collapse</string>
    <string name="copy">Copy</string>
    <string name="cut">Cut</string>
    <string name="dismiss">Dismiss</string>
    <string name="expand">Expand</string>
    <string name="paste">Paste</string>
    <string name="scroll_backward">Scroll backward</string>
    <string name="scroll_forward">Scroll forward</string>
    <string name="select">Select</string>
    <string name="focus">Focus</string>

    <!-- Actions available through the docking panel -->
    <string name="back_button">Back button</string>
    <string name="home_button">Home button</string>
    <string name="recents_button">Recents button</string>
    <string name="notifications_button">Notifications button</string>
    <string name="dock_panel_button">Expand/collapse dock menu</string>
    <string name="softkeyboard_button">Open keyboard</string>
    <string name="scroll_refresh_button">Refresh scrolling buttons</string>
    <string name="toggle_context_menu_button">Toggle pointer context menu</string>
    <string name="disable_click_button">Disable click</string>

    <!-- Messages for the notification -->
    <string name="running_click_to_pause">Running (click to pause)</string>
    <string name="stopped_click_to_resume">Stopped (click to resume)</string>

    <!-- OpenCV installation stuff. These allow to compose a message like:
        "Installation cancelled" "EVA"" needs OpenCV manager..."
    -->
    <string name="installation_cancelled">Installation cancelled</string>
    <string name="needs_opencv_retry"> needs OpenCV manager to run. Retry installation?</string>

    <!-- Crash report messages (ACRA) -->
    <string name="crash_toast_text">Oops! EVA crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing EVA to stop. Please help us fix this by sending us error data, all you have to do is click OK.</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="crash_dialog_ok_toast">Thank you!</string>

    <!-- Slave mode gamepad settings -->
    <string name="gamepad_settings">Gamepad settings</string>
    <string name="gamepad_location">Gamepad location</string>
    <string name="top_left">Top left</string>
    <string name="bottom_left">Bottom left</string>
    <string name="top_center">Top center</string>
    <string name="bottom_center">Bottom center</string>
    <string name="top_right">Top right</string>
    <string name="bottom_right">Bottom right</string>
    <string name="eviacam_slave_mode_preferences_title">EVA slave mode preferences</string>
    <string name="slave_mode_preferences">Slave mode preferences</string>
    <string name="gamepad_interface_settings">Gamepad interface</string>
    <string name="gamepad_transparency">Transparency</string>
    <string name="gamepad_abs_speed">Abs. mode speed</string>
    <string name="gamepad_abs_speed_summary">Speed when using absolute mode</string>
    <string name="gamepad_rel_sensitivity">Rel. mode sensitivity</string>
    <string name="gamepad_rel_sensitivity_summary">Sensitivity when using relative mode (low values set high sensitivity)</string>
    <string name="gamepad_preferences">Gamepad preferences</string>
    <string name="mouse_preferences">Mouse preferences</string>

    <!-- Wizard -->
    <string name="wizard_icon_name">EVA Wizard</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="finish">Finish</string>
    <string name="prerequisites">Prerequisites</string>
    <string name="install">Install</string>
    <string name="keyboard_setup">Keyboard set up</string>
    <string name="wiz_set_keyboard">
        <![CDATA[1. Open: \'Settings > Language & input\']]>\n
        2. Enable \'EVA Keyboard\'\n
        3. Tap \'Default\'\n
        4. Choose \'EVA Keyboard\'
    </string>
    <string name="wiz_set_keyboard_lollipop">
        <![CDATA[1. Open: \'Settings > Language & input > Current Keyboard > CHOOSE KEYBOARDS\']]>\n
        2. Enable \'EVA Keyboard\'\n
        3. Go back\n
        4. Tap \'Current Keyboard\'\n
        5. Choose \'EVA Keyboard\'
    </string>
    <string name="check">Check</string>
    <string name="done">Done</string>
    <string name="opencv_manager_required">OpenCV manager is required to run EVA</string>
    <string name="camera_viewer">Camera viewer</string>
    <string name="camera_viewer_wizard1">Displays the image of the frontal camera in real time</string>
    <string name="camera_viewer_wizard2">
        <![CDATA[
        <b>Dark red border:</b> face detected.<br/>
        <b>White border:</b> face NOT detected.<br/><br/>
        ]]>
    </string>
    <string name="dock_menu">Dock menu</string>
    <string name="home">Home</string>
    <string name="recents">Recents</string>
    <string name="open_notifications">Open notifications</string>
    <string name="open_keyboard">Open keyboard</string>
    <string name="toggle_click">Toggle click generation</string>
    <string name="scroll_buttons">Scroll buttons</string>
    <string name="scroll_buttons_description">Allow you to scroll the content of some windows and
        views by clicking them.</string>
    <string name="scroll_buttons_remaks">Due to restrictions of the Android platform, the scroll
        buttons might not always work (e.g. while using a web browser). In such circumstances
        you could try scrolling by using the navigation keyboard.</string>
    <string name="navigation_keyboard">Navigation keyboard</string>
    <string name="keyboard">Keyboard</string>
    <string name="keyboard_remarks">Most standard keyboards do not work with EVA.
        We provide a basic keyboard that needs to be enabled manually.</string>
    <string name="configure">Configure</string>
    <string name="keyboard_not_configured">Keyboard not configured</string>
    <string name="keyboard_not_configured_confirm">Are you sure you want to continue without configuring the keyboard?</string>
    <string name="configuration_settings">Configuration settings</string>
    <string name="configuration_settings_description">Some parameters can be adjusted to fit the user\'s needs.</string>
    <string name="settings">Settings</string>
    <string name="known_limitations">Known limitations</string>
    <string name="limitations_intro">Due to Android restrictions some features are not currently
        available, yet.</string>
    <string name="limitation1">- Does not work with many games.</string>
    <string name="limitation2">- Web browsers do not handle properly some actions (it is
        recommended to use Google Chrome).</string>
    <string name="limitation3">- Applications such as Maps, Earth and Gallery work with limitations.</string>
    <string name="how_to_run"><![CDATA[To start EVA go to:
        \n\nSettings > Accessibility > %1$s]]></string>
    <string name="run_this_wizard_at_startup">Run this wizard at startup</string>

    <!-- Toasts -->
    <string name="keyboard_not_enabled_toast">EVA Keyboard is not enabled. Use the EVA Wizard to enable it.</string>
    <string name="pointer_stopped_toast">EVA stopped %1$s without detecting a face</string>
</resources>
